@@ -7,6 +7,7 @@
     * Spectrum models: 16k, 48k (English and Spanish), 48k+ (English and Spanish), Inves Spectrum +, Spectrum 128k (English and Spanish), Spectrum +2 (English, Spanish and French), Spectrum +2A (English and Spanish), Spectrum +3 (English and Spanish), Microdigital TK90X (Portuguese and Spanish), TK95 (Portuguese and Spanish)
     * Sinclair QL
     * Cambridge Z88
+    * Timex TS 1000
     * Timex TS 2068 
     * Timex TC 2048, TC 2068
     * Sam Coupe
