@@ -406,6 +406,7 @@ extern z80_bit stdout_simpletext_automatic_redraw;
 #define MACHINE_ID_ZX80			        	120
 #define MACHINE_ID_ZX81		        		121
 #define MACHINE_ID_ACE		        		122
+#define MACHINE_ID_TIMEX_TS1000	        	123
 
 #define MACHINE_ID_Z88		        		130
 
@@ -476,8 +477,12 @@ extern z80_bit stdout_simpletext_automatic_redraw;
 
 #define MACHINE_IS_ZX80 (current_machine_type==MACHINE_ID_ZX80)
 #define MACHINE_IS_ZX81 (current_machine_type==MACHINE_ID_ZX81)
+#define MACHINE_IS_TS1000 (current_machine_type==MACHINE_ID_TIMEX_TS1000)
 
-#define MACHINE_IS_ZX81_TYPE (MACHINE_IS_ZX81)
+#define MACHINE_IS_ZX81_TYPE (MACHINE_IS_ZX81 || MACHINE_IS_TS1000)
+
+#define MACHINE_IS_ZX8081 (MACHINE_IS_ZX80 || MACHINE_IS_ZX81_TYPE)
+#define MACHINE_IS_ZX8081ACE (MACHINE_IS_ZX8081 || MACHINE_IS_ACE)
 
 #define MACHINE_IS_ACE (current_machine_type==MACHINE_ID_ACE)
 
@@ -524,8 +529,7 @@ extern z80_bit stdout_simpletext_automatic_redraw;
 #define MACHINE_IS_ZXEVO (MACHINE_IS_TSCONF || MACHINE_IS_BASECONF)
 
 
-#define MACHINE_IS_ZX8081 (MACHINE_IS_ZX80 || MACHINE_IS_ZX81)
-#define MACHINE_IS_ZX8081ACE (MACHINE_IS_ZX8081 || MACHINE_IS_ACE)
+
 
 
 #define MACHINE_IS_CPC (current_machine_type>=MACHINE_ID_CPC_464 && current_machine_type<=149)
