@@ -7,6 +7,7 @@ Added machine Spectrum 48k+
 Added machine Timex TC2048
 Added machine Timex TC2068
 Added machine TK95 Spanish
+Added machine Timex TS1000
 Added disk image browsing from storage MMC/IDE menus
 Added PZX load support as standard tape
 Added TAP to PZX converter
